<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Order_Menu">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:scaleType="center"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        tools:srcCompat="@tools:sample/avatars" />


        <TextView
            android:id="@+id/txtNamaMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textSize="30sp"
            android:textColor="#4CAF50"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/nama_menu" />

        <TextView
            android:id="@+id/txtRHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/poppins"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/harga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.935"
            app:layout_constraintStart_toEndOf="@+id/txtNamaMenu"
            app:layout_constraintTop_toBottomOf="@+id/txtJam"
            tools:text="Harga" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:textAlignment="textStart"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:text="Detail"/>




    <TextView
        android:id="@+id/txtDetail"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        tools:text="Desc" />


        <TextView
            android:id="@+id/txtTgl"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal"
            android:textSize="20dp"
            android:textColor="#4CAF50"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            tools:text="Tanggal" />

        <TextView
            android:id="@+id/txtJam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins"
            android:text="@string/jam"
            android:textStyle="bold"
            tools:text="Jam" />




    <EditText
        android:id="@+id/edtNoBangku"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#000000"
        android:background="#D9FFDA"
        android:hint="Masukan no bangku"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRHarga" />

    <Button
        android:id="@+id/btnSaveOrder"
        android:layout_width="125dp"
        android:backgroundTint="#4CAF50"
        android:layout_height="wrap_content"
        app:cornerRadius="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_order"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNoBangku" />


    <Button
        android:id="@+id/btnOrderAgain"
        android:layout_width="170dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/order_lagi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveOrder" />


</LinearLayout>